# mlcast

./: .gitignore  README.md  mlcast_api.py  pyproject.toml  pysteps_ref.py
api_reference/: pl_ref.py
examples/scripts/: simple_train.py
src/mlcast/: __init__.py  models.py
src/mlcast/data/: zarr_datamodule.py  zarr_dataset.py
src/mlcast/models/: base.py
src/mlcast/modules/: __init__.py  convgru_modules.py
