[project]
name = "mlcast"
version = "0.0.1"
description = "mlcast nowcasting package"
readme = "README.md"
authors = [
    { name = "Gabriele Franch", email = "franch@fbk.eu" },
    { name = "Leif Denby" }
]
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5.2",
    "numpy>=2.2.6",
    "torch>=2.7.1",
    "xarray>=2025.6.1",
]

[project.scripts]
mlcast = "mlcast:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
